--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ path = "src/main.rs"
 tree-sitter = "0.26"
 tree-sitter-bash = "0.25"
 
+# Settings
+dirs = "6"
+
 # Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
