feat: add shellcheck gate and generate unified gate functions
Add shellcheck to devtools gate (read-only static analyzer, always allow).

Improve declarative system by generating unified gate functions:
- build.rs now generates check_*_gate() for each TOML file
- Gates can use generated function instead of manual routing
- Custom handlers marked in TOML, caller handles Skip result

Simplify gate files using generated functions:
- gh.rs: 356 → 136 lines (removed dead code)
- git.rs: 494 → 449 lines (kept global opts parsing)
- devtools.rs: ~300 → ~130 lines (only ruff custom)

New workflow to add a tool: edit TOML, rebuild. No Rust changes needed.

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -225,3 +225,11 @@ if_flags_any = ["--check", "--check-only", "--diff"]
 
 [[programs.ask]]
 reason = "Sorting imports"
+
+# =============================================================================
+# SHELLCHECK (always safe - read-only static analysis)
+# =============================================================================
+
+[[programs]]
+name = "shellcheck"
+unknown_action = "allow"
