feat: add hadolint to allowed devtools
Dockerfile linter - read-only static analysis like shellcheck.

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -233,3 +233,7 @@ reason = "Sorting imports"
 [[programs]]
 name = "shellcheck"
 unknown_action = "allow"
+
+[[programs]]
+name = "hadolint"
+unknown_action = "allow"
