fix(gh): detect implicit POST in gh api with -f/--field flags
gh api uses POST implicitly when -f, -F, --field, --raw-field, or
--input flags are present. Previously these were incorrectly allowed
as "read-only" since only explicit -X method was checked.

Now detects implicit POST flags and requires approval unless an
explicit -X GET overrides.

--- a/rules/gh.toml
+++ b/rules/gh.toml
@@ -22,6 +22,8 @@ trigger = "api"
 method_flags = ["-X", "--method"]
 safe_methods = ["GET"]
 default_method = "GET"
+# Flags that implicitly trigger POST (adding fields/data to request body)
+implicit_post_flags = ["-f", "-F", "--field", "--raw-field", "--input"]
 
 # === Blocked Commands ===
 # These are never allowed
