feat(gates): add read-only system info commands and golangci-lint
basics.toml:
- Add locale, getconf (system info)
- Add vainfo, vdpauinfo, glxinfo, clinfo (GPU info)
- Add xdpyinfo, xwininfo (X display info)
- Excluded: dmesg (-C clears), vulkaninfo (--html writes files)

devtools.toml:
- Add golangci-lint with --fix detection

package_managers.toml:
- go env: allow without -w/-u, ask with write flags
- poetry env: allow info/list/activate, ask for use/remove

package_managers.rs:
- Fix go doc and go env to be allowed (with TOML conditions)
- Fix poetry env info/activate to be allowed

--- a/rules/basics.toml
+++ b/rules/basics.toml
@@ -101,6 +101,19 @@ safe_commands = [
     "lsblk",
     "lspci",
     "lsusb",
+    "locale",
+    "getconf",
+
+    # GPU/graphics info (read-only only)
+    "vainfo",
+    "vdpauinfo",
+    "glxinfo",
+    "clinfo",
+
+    # Display info (read-only only)
+    "xdpyinfo",
+    "xwininfo",
+
 
     # Network info (read-only)
     "ping",
