fix(devtools): add sg as alias for ast-grep

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -54,6 +54,7 @@ if_flags_any = ["--commit"]
 
 [[programs]]
 name = "ast-grep"
+aliases = ["sg"]
 unknown_action = "allow"  # Default is search mode
 
 [[programs.ask]]
