feat(mise): expand mise tasks to underlying commands for permission checks
When bash-gates sees `mise run <task>` or `mise <task>`, it now:
- Finds mise config file (.mise.toml/mise.toml) in cwd or parent dirs
- Parses TOML and extracts the task's run command
- Recursively includes commands from depends = [...] tasks
- Handles dir = "..." by prepending cd <dir> &&
- Passes all extracted commands through the gate engine
- Returns strictest decision with context

Also adds:
- air, actionlint to devtools (safe read-only tools)
- createdb, dropdb, pg_dump, pg_restore to system gate
- migrate, goose, dbmate, flyway, alembic for db migrations

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -251,3 +251,19 @@ unknown_action = "allow"
 reason = "Applying lint fixes"
 if_flags_any = ["--fix"]
 
+# =============================================================================
+# AIR (Go hot-reload - runs/watches files)
+# =============================================================================
+
+[[programs]]
+name = "air"
+unknown_action = "allow"  # Just runs go build/run in watch mode
+
+# =============================================================================
+# ACTIONLINT (GitHub Actions linter - read-only)
+# =============================================================================
+
+[[programs]]
+name = "actionlint"
+unknown_action = "allow"
+
