feat(package_json): expand npm/pnpm/yarn scripts to underlying commands
When package managers run scripts, bash-gates now:
- Finds package.json in cwd or parent directories
- Extracts the script's underlying command
- Checks that command through the gate engine

Examples:
- `pnpm run lint` → looks up "lint" script → "biome check ." → allow
- `pnpm run lint:fix` → "biome check --write ." → ask
- `yarn test` → "vitest run" → allow

Also adds dev tools to devtools gate:
- vite, vitest, jest, mocha (test/dev servers)
- tsc, tsup, esbuild (compilers/bundlers)
- turbo, nx (monorepo tools)
- oxlint, knip (linters/analyzers)

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -267,3 +267,91 @@ unknown_action = "allow"  # Just runs go build/run in watch mode
 name = "actionlint"
 unknown_action = "allow"
 
+# =============================================================================
+# VITE (dev server / build tool)
+# =============================================================================
+
+[[programs]]
+name = "vite"
+unknown_action = "allow"
+
+# =============================================================================
+# VITEST (test runner)
+# =============================================================================
+
+[[programs]]
+name = "vitest"
+unknown_action = "allow"
+
+# =============================================================================
+# JEST (test runner)
+# =============================================================================
+
+[[programs]]
+name = "jest"
+unknown_action = "allow"
+
+# =============================================================================
+# MOCHA (test runner)
+# =============================================================================
+
+[[programs]]
+name = "mocha"
+unknown_action = "allow"
+
+# =============================================================================
+# TSC (TypeScript compiler - type checking)
+# =============================================================================
+
+[[programs]]
+name = "tsc"
+unknown_action = "allow"
+
+# =============================================================================
+# TSUP (TypeScript bundler)
+# =============================================================================
+
+[[programs]]
+name = "tsup"
+unknown_action = "allow"
+
+# =============================================================================
+# ESBUILD (JavaScript bundler)
+# =============================================================================
+
+[[programs]]
+name = "esbuild"
+unknown_action = "allow"
+
+# =============================================================================
+# TURBO (monorepo build tool)
+# =============================================================================
+
+[[programs]]
+name = "turbo"
+unknown_action = "allow"
+
+# =============================================================================
+# NX (monorepo build tool)
+# =============================================================================
+
+[[programs]]
+name = "nx"
+unknown_action = "allow"
+
+# =============================================================================
+# KNIP (dead code detector)
+# =============================================================================
+
+[[programs]]
+name = "knip"
+unknown_action = "allow"
+
+# =============================================================================
+# OXLINT (fast linter)
+# =============================================================================
+
+[[programs]]
+name = "oxlint"
+unknown_action = "allow"
+
