fix(package_managers): go run should ask, not allow
go run executes arbitrary code and can have side effects.
Previously it was incorrectly auto-allowed.

--- a/rules/package_managers.toml
+++ b/rules/package_managers.toml
@@ -877,18 +877,20 @@ subcommand = "-h"
 [[programs.allow]]
 subcommand = "--help"
 
-# Safe local commands
+# Safe local commands (no side effects)
 [[programs.allow]]
 subcommand = "build"
-
-[[programs.allow]]
-subcommand = "run"
 
 [[programs.allow]]
 subcommand = "test"
 
 [[programs.allow]]
 subcommand = "fmt"
+
+# go run executes arbitrary code - needs approval
+[[programs.ask]]
+subcommand = "run"
+reason = "Executing Go code"
 
 [[programs.allow]]
 subcommand = "clean"
