feat: add mise, docker compose, go fmt, gofmt, golangci-lint support
- Add mise built-in commands to package_managers gate
  - allow: ls, list, current, where, which, env, version, doctor, reshim, trust, exec
  - ask: install, use, upgrade, uninstall, activate, prune, sync, self-update

- Add docker compose (new CLI plugin) support to cloud gate
  - Custom handler skips flags between compose and subcommand
  - docker compose -f x.yml config now correctly allowed

- Fix go fmt to ask (modifies files, was incorrectly allowed)

- Add gofmt to devtools gate
  - allow by default (outputs to stdout)
  - ask with -w flag (writes files)

- Add golangci-lint to devtools (was already there, just docs)

- Add go, gofmt, golangci-lint to acceptEdits file-editing programs
  - go fmt auto-allowed in acceptEdits mode
  - gofmt -w auto-allowed in acceptEdits mode
  - golangci-lint --fix auto-allowed in acceptEdits mode

- Update CLAUDE.md documentation

--- a/rules/cloud.toml
+++ b/rules/cloud.toml
@@ -654,6 +654,88 @@ subcommand = "system df"
 [[programs.allow]]
 subcommand = "system info"
 
+# docker compose (new docker CLI plugin, equivalent to docker-compose)
+[[programs.allow]]
+subcommand = "compose ps"
+
+[[programs.allow]]
+subcommand = "compose logs"
+
+[[programs.allow]]
+subcommand = "compose config"
+
+[[programs.allow]]
+subcommand = "compose images"
+
+[[programs.allow]]
+subcommand = "compose ls"
+
+[[programs.allow]]
+subcommand = "compose version"
+
+[[programs.allow]]
+subcommand = "compose top"
+
+[[programs.ask]]
+subcommand = "compose up"
+reason = "Compose: Starting services"
+
+[[programs.ask]]
+subcommand = "compose down"
+reason = "Compose: Stopping services"
+
+[[programs.ask]]
+subcommand = "compose start"
+reason = "Compose: Starting services"
+
+[[programs.ask]]
+subcommand = "compose stop"
+reason = "Compose: Stopping services"
+
+[[programs.ask]]
+subcommand = "compose restart"
+reason = "Compose: Restarting services"
+
+[[programs.ask]]
+subcommand = "compose build"
+reason = "Compose: Building images"
+
+[[programs.ask]]
+subcommand = "compose pull"
+reason = "Compose: Pulling images"
+
+[[programs.ask]]
+subcommand = "compose push"
+reason = "Compose: Pushing images"
+
+[[programs.ask]]
+subcommand = "compose exec"
+reason = "Compose: Executing in container"
+
+[[programs.ask]]
+subcommand = "compose run"
+reason = "Compose: Running command"
+
+[[programs.ask]]
+subcommand = "compose rm"
+reason = "Compose: Removing containers"
+
+[[programs.ask]]
+subcommand = "compose create"
+reason = "Compose: Creating containers"
+
+[[programs.ask]]
+subcommand = "compose kill"
+reason = "Compose: Killing containers"
+
+[[programs.ask]]
+subcommand = "compose pause"
+reason = "Compose: Pausing containers"
+
+[[programs.ask]]
+subcommand = "compose unpause"
+reason = "Compose: Unpausing containers"
+
 # Write commands
 [[programs.ask]]
 subcommand = "run"
