feat(devtools): add gci (Go import organizer) support
- gci diff allowed (read-only)
- gci write asks (modifies files)
- Auto-allowed in acceptEdits mode

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -252,6 +252,18 @@ reason = "Applying lint fixes"
 if_flags_any = ["--fix"]
 
 # =============================================================================
+# GCI (Go import organizer - write subcommand modifies files)
+# =============================================================================
+
+[[programs]]
+name = "gci"
+unknown_action = "allow"
+
+[[programs.ask]]
+reason = "Formatting imports"
+if_flags_any = ["write"]
+
+# =============================================================================
 # AIR (Go hot-reload - runs/watches files)
 # =============================================================================
 
