refactor: make more gate rules declarative via TOML
- Fix build.rs to properly include subcommand check with if_flags_any
  for allow rules (was checking flags without verifying subcommand)

- Fix build.rs to exclude if_flags_any rules from simple_allows
  (prevents conditional allows from being matched unconditionally)

- Remove ruff custom handler - TOML now handles format --check/--diff
  allow and format (bare) ask correctly

- Remove terraform custom handler - TOML now handles fmt -check allow
  and fmt (bare) ask correctly

- Remove git checkout -b/-B and checkout -- custom handlers - now
  declarative via if_flags_any in TOML

- Remove git push --force-with-lease custom handler - TOML already
  handles this correctly (--force-with-lease != --force)

- Document remaining custom handlers with explanations of why they
  can't be made declarative (need arg value checking, script parsing,
  3-word patterns, flag skipping to find subcommands)

Custom handlers that remain (with documented reasons):
- git: extract_subcommand (skip global opts), check_git_add (wildcards, .)
- cloud: check_gcloud (3-word patterns), check_docker (compose flag skip),
         check_kubectl (3-word blocks)
- basics: check_xargs (target cmd safety), check_shell_c (script parsing)

--- a/rules/git.toml
+++ b/rules/git.toml
@@ -294,6 +294,17 @@ reason = "Merging branches"
 subcommand = "rebase"
 reason = "Rebasing"
 
+# checkout with specific flag conditions (checked before general checkout)
+[[programs.ask]]
+subcommand = "checkout"
+reason = "Creating branch"
+if_flags_any = ["-b", "-B"]
+
+[[programs.ask]]
+subcommand = "checkout"
+reason = "Discarding changes"
+if_flags_any = ["--"]
+
 [[programs.ask]]
 subcommand = "checkout"
 reason = "Checking out"
@@ -415,18 +426,3 @@ description = "Skip global options (-C, --git-dir, -c, etc.) to find actual subc
 program = "git"
 handler = "check_git_add"
 description = "Handle git add with special checks for -A, --all, ., wildcards"
-
-[[custom_handlers]]
-program = "git"
-handler = "force_with_lease_handling"
-description = "push --force-with-lease is treated as safe push (not flagged as force push)"
-
-[[custom_handlers]]
-program = "git"
-handler = "checkout_branch_creation"
-description = "checkout -b/-B creates branch (different reason than regular checkout)"
-
-[[custom_handlers]]
-program = "git"
-handler = "checkout_discard_changes"
-description = "checkout -- discards changes (different reason than regular checkout)"
