chore(lefthook): auto-stage formatted files in pre-commit
Add stage_fixed: true to fmt command so formatted files are
automatically staged before the commit completes.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -12,6 +12,7 @@ pre-commit:
     fmt:
       run: cargo fmt
       glob: "*.rs"
+      stage_fixed: true
       priority: 2
     # Then check with clippy
     clippy:
