fix(gates): require approval for commands that write to local filesystem
Commands like `gh repo clone`, `git gc`, and `apt download` were incorrectly
auto-approved because they're "read-only" from the remote's perspective.
However, they write to the local filesystem and should require approval.

Changed from allow → ask:
- gh: repo clone, gist clone, run download, release download
- git: gc, prune, maintenance
- gcloud: container clusters get-credentials
- apt: download

--- a/rules/cloud.toml
+++ b/rules/cloud.toml
@@ -226,8 +226,9 @@ subcommand = "container clusters list"
 [[programs.allow]]
 subcommand = "container clusters describe"
 
-[[programs.allow]]
+[[programs.ask]]
 subcommand = "container clusters get-credentials"
+reason = "Updating kubeconfig (writes to ~/.kube/config)"
 
 [[programs.allow]]
 subcommand = "storage ls"
