feat(gh): treat search/ endpoints as read-only for gh api
GitHub search endpoints only accept GET requests, so -f flags should
be treated as query parameters, not POST body data. Added
read_only_endpoints config to API rules to handle this case.

- Add read_only_endpoints field to ApiRules in build.rs
- Configure search/ as read-only in gh.toml
- Add tests for gh api search with -f flags

--- a/rules/gh.toml
+++ b/rules/gh.toml
@@ -24,6 +24,8 @@ safe_methods = ["GET"]
 default_method = "GET"
 # Flags that implicitly trigger POST (adding fields/data to request body)
 implicit_post_flags = ["-f", "-F", "--field", "--raw-field", "--input"]
+# Endpoints that are always GET (ignore implicit_post_flags for these)
+read_only_endpoints = ["search/"]
 
 # === Blocked Commands ===
 # These are never allowed
