feat(gates): add ty, gitleaks, lefthook and expand Python tool support
- Add ty and basedpyright to safe Python type checkers
- Add lint-imports, pylint, flake8, bandit, vulture, pyflakes,
  pycodestyle, pydocstyle to safe Python linters
- Add gitleaks (secret scanner) as always-allow in devtools
- Add lefthook (git hooks manager) with appropriate ask/allow rules
- Add alembic read-only commands (history, current, heads, branches, show)
- Fix duplicate prefix in uv run reasons (was "uv run alembic: alembic:")

--- a/rules/devtools.toml
+++ b/rules/devtools.toml
@@ -299,6 +299,37 @@ unknown_action = "allow"  # Just runs go build/run in watch mode
 name = "actionlint"
 unknown_action = "allow"
 
+# Gitleaks - secret scanner (read-only)
+[[programs]]
+name = "gitleaks"
+unknown_action = "allow"
+
+# Lefthook - git hooks manager
+[[programs]]
+name = "lefthook"
+unknown_action = "ask"
+
+[[programs.allow]]
+subcommand = "run"
+
+[[programs.allow]]
+subcommand = "version"
+
+[[programs.allow]]
+subcommand = "dump"
+
+[[programs.ask]]
+subcommand = "install"
+reason = "Installing git hooks"
+
+[[programs.ask]]
+subcommand = "uninstall"
+reason = "Removing git hooks"
+
+[[programs.ask]]
+subcommand = "add"
+reason = "Adding hook configuration"
+
 # =============================================================================
 # VITE (dev server / build tool)
 # =============================================================================
