feat(acceptEdits): auto-allow mkdir within allowed directories
In acceptEdits mode, mkdir commands targeting paths within cwd or
additionalDirectories are now auto-allowed. Path escapes (../, ~/,
absolute paths outside project) still require approval.

--- a/rules/filesystem.toml
+++ b/rules/filesystem.toml
@@ -97,6 +97,7 @@ unknown_action = "ask"
 
 [[programs.ask]]
 reason = "Creating directory"
+accept_edits_auto_allow = true
 
 # =============================================================================
 # TOUCH (always asks)
