--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,19 @@ regex = "1"
 # Rules
 toml = "0.9"
 
+# Time handling for tracking TTL
+chrono = { version = "0.4", features = ["serde"] }
+
+# File locking for concurrent access
+fs2 = "0.4"
+
+# UUID for pending entry IDs
+uuid = { version = "1", features = ["v4"] }
+
+# TUI for interactive review
+ratatui = "0.29"
+crossterm = "0.28"
+
 [dev-dependencies]
 proptest = "1"  # Property-based/fuzz testing
 tempfile = "3"  # Temporary directories for settings.json tests
